<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HealthApp</string>
    <string name="exercise_type_prompt">Activity Type</string>
    <string name="repetitions_prompt">Repetitions</string>
    <string name="sets_prompt">Sets</string>
    <string name="duration_prompt">Duration (HH:MM:SS)</string>
    <string name="heart_rate_prompt">Heart Rate (bpm)</string>
    <string name="mood_prompt">Mood</string>
    <string name="admin_id_prompt">Admin ID</string>
    <string name="admin_password_prompt">Admin Password</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>

    <string-array name="activity_types">
        <item>Select Activity</item>
        <item>Workout</item>
        <item>Rehabilitation</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>KeepFit</item>
        <item>Gym</item>
        <item>Entertainment</item>
        <item>Skipping</item>
        <item>Sprint</item>
        <item>Running</item>
        <item>Ball</item>
        <item>Climbing</item>
        <item>Yoga</item>
        <item>Weightlifting</item>
    </string-array>

    <string-array name="mood_options">
        <item>Select Mood</item>
        <item>Happy</item>
        <item>Neutral</item>
        <item>Sad</item>
        <item>Energetic</item>
    </string-array>

</resources>